--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Just A Fun Form</title>
 </head>
 <body>
-    <form action="https://formsubmit.co/jimmyjnr111@gmail.com" method="post">
+    <form action="https://formsubmit.co/900848b2236014691ab9e3ccc9744ff6" method="post">
             <h1>Test Form</h1>
             <p><input type="text" id="fname" placeholder="First name" required></p>
             <p"><input type="text" id="lname" placeholder="Last name" required></p>
