--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <form action="https://formsubmit.co/900848b2236014691ab9e3ccc9744ff6" method="post">
             <h1>Test Form</h1>
-            <p><input type="text" id="fname" placeholder="First name" required></p>
-            <p"><input type="text" id="lname" placeholder="Last name" required></p>
-            <p><input type="text" id="mail" placeholder="Email address" required></p>
+            <p><input type="text" name="name" id="fname" placeholder="First name" required></p>
+            <p><input type="text" name="Last Name" id="lname" placeholder="Last name" required></p>
+            <p><input type="text" name="emai;" id="mail" placeholder="Email address" required></p>
             
             <label for="country">Country</label>
             <select name="Country" id="country" required>
@@ -26,7 +26,7 @@
                 <option value="zimbabwe">Zimbabwe</option>
             </select><br><br>
             <label for="country code">Country code</label>
-            <select name="country id" id="code" required>
+            <select name="country code" id="code" required>
                 <option value=""></option>
                 <option value="+27">+27</option>
                 <option value="+354">+354</option>
@@ -38,7 +38,7 @@
                 <option value="+54">+54</option>
                 <option value="+263">+263</option>
             </select>
-            <p><input type="number" id="phoneno" placeholder="Phone no" required></p>
+            <p><input type="number" name="phone" id="phoneno" placeholder="Phone no" required></p>
             <h3>Gender:</h3> <br>
             <p><input type="radio" name="Gender" value="Male">Male</p>
             <p><input type="radio" name="Gender" value="Female">Female</p>
