--- a/index.html
+++ b/index.html
@@ -7,49 +7,56 @@
 </head>
 <body>
     <form action="https://formsubmit.co/900848b2236014691ab9e3ccc9744ff6" method="post">
-            <h1>Test Form</h1>
-            <p><input type="text" name="name" id="fname" placeholder="First name" required></p>
-            <p><input type="text" name="Last Name" id="lname" placeholder="Last name" required></p>
-            <p><input type="text" name="emai;" id="mail" placeholder="Email address" required></p>
             
-            <label for="country">Country</label>
-            <select name="Country" id="country" required>
-                <option value=""></option>
-                <option value="south africa">South Africa</option>
-                <option value="iceland">Iceland</option>
-                <option value="canada">Canada</option>
-                <option value="madagascar">Madagascar</option>
-                <option value="malawi">Malawi</option>
-                <option value="mozambique">Mozambique</option>
-                <option value="nigeria">Nigeria</option>
-                <option value="argentina">Argentina</option>
-                <option value="zimbabwe">Zimbabwe</option>
-            </select><br><br>
-            <label for="country code">Country code</label>
-            <select name="country code" id="code" required>
-                <option value=""></option>
-                <option value="+27">+27</option>
-                <option value="+354">+354</option>
-                <option value="+1">+1</option>
-                <option value="+261">+261</option>
-                <option value="+265">+265</option>
-                <option value="+258">+258</option>
-                <option value="+234">+234</option>
-                <option value="+54">+54</option>
-                <option value="+263">+263</option>
-            </select>
-            <p><input type="number" name="phone" id="phoneno" placeholder="Phone no" required></p>
-            <h3>Gender:</h3> <br>
-            <p><input type="radio" name="Gender" value="Male">Male</p>
-            <p><input type="radio" name="Gender" value="Female">Female</p>
-            <p><input type="radio" name="Gender" value="Non-binary">Non-binary</p>
-            <p><input type="radio" name="Gender" value="Other">Other</p>
-            <h3>Age:</h3> <br>
-            <li><input type="checkbox" name="age" value="13-17">13-17</li>
-            <li><input type="checkbox" name="age" value="18-25">18-25</li>
-            <li><input type="checkbox" name="age" value="25+">25+</li>
-            <br><br><br>
-            <input class="submit" type="submit">
+        <!-- honeypot -->
+
+        <input type="text" name="_honey" style="display: none;">
+
+        <!-- Disable Captcha-->
+        <input type="hidden" name="_captcha" value="false">
+        <h1>Test Form</h1>
+        <p><input type="text" name="Name" id="fname" placeholder="First name" required></p>
+        <p><input type="text" name="Last Name" id="lname" placeholder="Last name" required></p>
+        <p><input type="text" name="Email;" id="mail" placeholder="Email address" required></p>
+            
+        <label for="country">Country</label>
+        <select name="Country" id="country" required>
+            <option value=""></option>
+            <option value="south africa">South Africa</option>
+            <option value="iceland">Iceland</option>
+            <option value="canada">Canada</option>
+            <option value="madagascar">Madagascar</option>
+            <option value="malawi">Malawi</option>
+            <option value="mozambique">Mozambique</option>
+            <option value="nigeria">Nigeria</option>
+            <option value="argentina">Argentina</option>
+            <option value="zimbabwe">Zimbabwe</option>
+        </select><br><br>
+        <label for="country code">Country code</label>
+        <select name="country code" id="code" required>
+            <option value=""></option>
+            <option value="+27">+27</option>
+            <option value="+354">+354</option>
+            <option value="+1">+1</option>
+            <option value="+261">+261</option>
+            <option value="+265">+265</option>
+            <option value="+258">+258</option>
+            <option value="+234">+234</option>
+            <option value="+54">+54</option>
+            <option value="+263">+263</option>
+        </select>
+        <p><input type="number" name="phone" id="phoneno" placeholder="Phone no" required></p>
+        <h3>Gender:</h3> <br>
+        <p><input type="radio" name="Gender" value="Male">Male</p>
+        <p><input type="radio" name="Gender" value="Female">Female</p>
+        <p><input type="radio" name="Gender" value="Non-binary">Non-binary</p>
+        <p><input type="radio" name="Gender" value="Other">Other</p>
+        <h3>Age:</h3> <br>
+        <li><input type="checkbox" name="age" value="13-17">13-17</li>
+        <li><input type="checkbox" name="age" value="18-25">18-25</li>
+        <li><input type="checkbox" name="age" value="25+">25+</li>
+        <br><br><br>
+        <input class="submit" type="submit">
     </form>
 </body>
 </html>
