--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/index.css">
     <script src="/js/index.js"></script>
-    <title>Kasi Kitchen</title>
+    <title>Business Mail</title>
 </head>
 <style>
 @import url('https://fonts.googleeapis.com/vss?family=Roboto');
