--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ textarea {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 320px) {
     .row {
         flex-direction: column;
     }
