--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ html, body {
 
 .form1 {
     flex: 1;
-    max-width: 600px;
+    max-width: 700px;
+    max-height: 1800px;
     background-color: #EFF0F1;
     border-radius: 10px;
     border: 1px solid #999;
