--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 
 html, body {
-    height: 100%;
+    height: fit-content;
 }
 
 #regpage {
@@ -34,7 +34,7 @@ html, body {
     background-color: #EFF0F1;
     border-radius: 10px;
     border: 1px solid #999;
-    margin: auto;
+    margin: 70px;
     margin-bottom: auto;
 }
 
@@ -275,7 +275,7 @@ textarea {
                     <div class="input-group">
                         <label>Charge yourself</label>
                         <div class="range-group">
-                            <input type="range" name="Money offered" onChange="changeSliderValue(this.value)" min="100" max="700" step="10" value="150">
+                            <input type="range" name="Willing&nbsp;To&nbsp;Pay" onChange="changeSliderValue(this.value)" min="100" max="700" step="10" value="150">
                             <label>R100 - R700</label>
                         </div>
                     </div>
